--- a/02-lint/php.gitlab-ci.yml
+++ b/02-lint/php.gitlab-ci.yml
@@ -5,10 +5,8 @@ php-lint:
   extends:
     - ".lint_base"
     - ".lint_rule"
-    - ".extended_runner_resource_request"
   variables:
-    LINT_IMAGE: harbor.example.com/devops/golangci-lint:latest
-    KUBERNETES_SERVICE_ACCOUNT_OVERWRITE: "builder"
+    LINT_IMAGE: harbor.example.com/devops/php-lint:latest
   script:
     - echo "Nothing"
   when: manual
