--- a/03-audit/java.maven.gitlab-ci.yml
+++ b/03-audit/java.maven.gitlab-ci.yml
@@ -1,13 +1,13 @@
 variables:
   SBOM_PATH: "target/bom.json"
-
-stages:
-  - Audit (src)
-
 Forming CycloneDX SBOM:
-  stage: Audit (src)
-  image:
-    name: "maven:3.9.6-eclipse-temurin-17"
+  extends:
+    - ".artifacts"
+    - ".audit_base"
+    - ".audit_rule"
+    - ".DefectDojo_variables"
+  variables:
+    AUDIT_IMAGE: "maven:3.9.6-eclipse-temurin-17"
   before_script:
     - cp -r settings.xml /usr/share/maven/conf/
   script:
