--- a/03-audit/node.yarn.gitlab-ci.yml
+++ b/03-audit/node.yarn.gitlab-ci.yml
@@ -4,14 +4,14 @@ stages:
 # Requirements
 #   node >= 18
 #   yarn >= 3 (berry)
-Forming CycloneDX SBOM (yarn) v1:
-  stage: Audit (src)
+
+Forming CycloneDX SBOM (yarn):
   variables:
     SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
     OUTPUT_FILE: "reports/cdx-sbom.yarn.json"
     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
   image:
-    name: "repository.rt.ru/node:22.9.0-alpine3.20"
+    name: "node:22.9.0-alpine3.20"
   before_script:
     - yarn dlx -q @cyclonedx/yarn-plugin-cyclonedx --help
     - mkdir reports/ || true
@@ -25,52 +25,46 @@ Forming CycloneDX SBOM (yarn) v1:
       - reports/cdx-sbom.yarn.json
     expire_in: 1 day
 
-# Requirements
-#   node >= 18
-#   yarn >= 3 (berry)
-Forming CycloneDX SBOM (yarn) v2:
-  stage: Audit (src)
-  variables:
-    SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
-    OUTPUT_FILE: "reports/cdx-sbom.yarn.json"
-    MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
-  image:
-    name: "repository.rt.ru/node:22.9.0-alpine3.20"
-  before_script:
-    - yarn add --dev @cyclonedx/yarn-plugin-cyclonedx
-    - yarn exec cyclonedx-yarn --help
-    - mkdir reports/ || true
-  script:
-    - yarn exec cyclonedx-yarn
-      --spec-version $SPEC_VERSION
-      --output-file $OUTPUT_FILE
-      --mc-type $MC_TYPE
-  artifacts:
-    paths:
-      - reports/cdx-sbom.yarn.json
-    expire_in: 1 day
+# Forming CycloneDX SBOM (yarn) v2:
+#   stage: Audit (src)
+#   variables:
+#     SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
+#     OUTPUT_FILE: "reports/cdx-sbom.yarn.json"
+#     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
+#   image:
+#     name: "node:22.9.0-alpine3.20"
+#   before_script:
+#     - yarn add --dev @cyclonedx/yarn-plugin-cyclonedx
+#     - yarn exec cyclonedx-yarn --help
+#     - mkdir reports/ || true
+#   script:
+#     - yarn exec cyclonedx-yarn
+#       --spec-version $SPEC_VERSION
+#       --output-file $OUTPUT_FILE
+#       --mc-type $MC_TYPE
+#   artifacts:
+#     paths:
+#       - reports/cdx-sbom.yarn.json
+#     expire_in: 1 day
 
-# Requirements
-#   node >= 18
-#   yarn >= 3 (berry)
-Forming CycloneDX SBOM (yarn) v3:
-  stage: Audit (src)
-  variables:
-    SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
-    OUTPUT_FILE: "reports/cdx-sbom.yarn.json"
-    MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
-  image:
-    name: "repository.rt.ru/node:22.9.0-alpine3.20"
-  before_script:
-    - yarn plugin import https://github.com/CycloneDX/cyclonedx-node-yarn/releases/latest/download/yarn-plugin-cyclonedx.cjs
-    - yarn cyclonedx --help
-    - mkdir reports/ || true
-  script:
-    - yarn cyclonedx
-      --spec-version $SPEC_VERSION
-      --output-file $OUTPUT_FILE
-      --mc-type $MC_TYPE
-  artifacts:
-    paths:
-      - reports/cdx-sbom.yarn.json
-    expire_in: 1 day
+# Forming CycloneDX SBOM (yarn) v3:
+#   stage: Audit (src)
+#   variables:
+#     SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
+#     OUTPUT_FILE: "reports/cdx-sbom.yarn.json"
+#     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
+#   image:
+#     name: "node:22.9.0-alpine3.20"
+#   before_script:
+#     - yarn plugin import https://github.com/CycloneDX/cyclonedx-node-yarn/releases/latest/download/yarn-plugin-cyclonedx.cjs
+#     - yarn cyclonedx --help
+#     - mkdir reports/ || true
+#   script:
+#     - yarn cyclonedx
+#       --spec-version $SPEC_VERSION
+#       --output-file $OUTPUT_FILE
+#       --mc-type $MC_TYPE
+#   artifacts:
+#     paths:
+#       - reports/cdx-sbom.yarn.json
+#     expire_in: 1 day
