--- a/04-sast/docker.trivy.image.gitlab-ci.yml
+++ b/04-sast/docker.trivy.image.gitlab-ci.yml
@@ -23,6 +23,12 @@ Trivy Image Scanning:
   after_script:
     - echo "Uploading"
     - dd-wrapper --dd-report-file=reports/iac.trivy.image.report.json --dd-engagement-test-title="Trivy Image Scan" --dd-engagement-scan-type="Trivy Scan"
+  rules:
+    - if: "$SAST_EXCLUDED_ANALYZERS =~ /Trivy Image Scanning/"
+      when: never
+    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
+      when: never
+    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
   when: manual
 
 DefectDojo Engagement Creation:
