--- a/04-sast/tf.gitlab-ci.yml
+++ b/04-sast/tf.gitlab-ci.yml
@@ -1,12 +1,8 @@
 include:
-  - local: 'functions.gitlab-ci.yml'
+  - local: '04-sast/tf/chechov.gitlab-ci.yml'
+  - local: '04-sast/tf/kics.gitlab-ci.yml'
+  - local: '04-sast/tf/terrascan.gitlab-ci.yml'
+  - local: '04-sast/tf/tfsec.gitlab-ci.yml'
 
-# TFSec (https://github.com/aquasecurity/tfsec)
-
-# Terrascan (https://github.com/tenable/terrascan)
-
-# chechov и почему-то посмотреть назад
-# https://www.checkov.io/1.Welcome/Quick%20Start.html
-
-# KICS Scanner (https://github.com/Checkmarx/kics)
-# Terraform
+variables:
+  DD_UPLOAD_REPORT: "true"
