--- a/04-sast/php.gitlab-ci.yml
+++ b/04-sast/php.gitlab-ci.yml
@@ -1,2 +1,5 @@
 include:
-  - local: '04-sast/php.progpilot.gitlab-ci.yml'
+  - local: '04-sast/php/progpilot.gitlab-ci.yml'
+
+variables:
+  DD_UPLOAD_REPORT: "true"
