--- a/04-sast/python.gitlab-ci.yml
+++ b/04-sast/python.gitlab-ci.yml
@@ -1,2 +1,5 @@
 include:
-  - local: '04-sast/python.bandit.gitlab-ci.yml'
+  - local: '04-sast/python/bandit.gitlab-ci.yml'
+
+variables:
+  DD_UPLOAD_REPORT: "true"
