--- a/04-sast/ruby.gitlab-ci.yml
+++ b/04-sast/ruby.gitlab-ci.yml
@@ -1,2 +1,5 @@
 include:
-  - local: '04-sast/ruby.brakeman.gitlab-ci.yml'
+  - local: '04-sast/ruby/brakeman.gitlab-ci.yml'
+
+variables:
+  DD_UPLOAD_REPORT: "true"
