--- a/04-sast/ruby/brakeman.gitlab-ci.yml
+++ b/04-sast/ruby/brakeman.gitlab-ci.yml
@@ -1,6 +1,9 @@
 include:
   - local: 'functions.gitlab-ci.yml'
 
+variables:
+  DD_UPLOAD_REPORT: "true"
+
 # Brakeman Scan (https://github.com/presidentbeef/brakeman)
 Brakeman:
   variables:
