--- a/04-sast/docker/dockle.image.gitlab-ci.yml
+++ b/04-sast/docker/dockle.image.gitlab-ci.yml
@@ -1,12 +1,13 @@
 include:
   - local: 'functions.gitlab-ci.yml'
 
+variables:
+  DD_UPLOAD_REPORT: "true"
+
 Dockle Image Scanning:
-  # stage: .post
   stage: SAST (image)
   extends:
     - ".sast_base"
-    - ".sast_rule"
     - ".DefectDojo_variables"
   variables:
     SAST_IMAGE: harbor.example.com/devops/dockle:latest
