--- a/04-sast/k8s.helm/kubeconform.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kubeconform.gitlab-ci.yml
@@ -1,6 +1,9 @@
 include:
   - local: 'functions.gitlab-ci.yml'
 
+variables:
+  DD_UPLOAD_REPORT: "true"
+
 # kubeconform (https://github.com/yannh/kubeconform)
 kubeconform:
   extends:
