--- a/04-sast/k8s.helm/checkov.gitlab-ci.yml
+++ b/04-sast/k8s.helm/checkov.gitlab-ci.yml
@@ -1,6 +1,9 @@
 include:
   - local: 'functions.gitlab-ci.yml'
 
+variables:
+  DD_UPLOAD_REPORT: "true"
+
 # chechov (https://github.com/bridgecrewio/checkov)
 checkov:
   extends:
