--- a/04-sast/k8s.helm/kube-score.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kube-score.gitlab-ci.yml
@@ -1,16 +1,21 @@
 include:
   - local: 'functions.gitlab-ci.yml'
 
-# kube-linter (https://github.com/stackrox/kube-linter)
-kube-linter:
+variables:
+  DD_UPLOAD_REPORT: "true"
+
+# kube-score (https://github.com/zegl/kube-score)
+kube-score:
   extends:
     - ".sast_base"
     - ".DefectDojo_variables"
   variables:
-    IAC_IMAGE: harbor.example.com/devops/kube-linter:latest 
+    IAC_IMAGE: zegl/kube-score:v1.18.0
+    HELM_VALUES_FILES: >
+      -f values.yaml
   script:
-    - kube-linter lint .
-    # - kube-linter lint /path/to/your/yaml.yaml
+    - helm template $HELM_VALUES_FILES . | kube-score score -
+      --output-format sarif
   rules:
     - if: "$CI_COMMIT_BRANCH"
       exists:
