--- a/04-sast/k8s.helm/kubescape.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kubescape.gitlab-ci.yml
@@ -1,6 +1,9 @@
 include:
   - local: 'functions.gitlab-ci.yml'
 
+variables:
+  DD_UPLOAD_REPORT: "true"
+
 # Kubescape Scanner (https://github.com/kubescape/kubescape)
 Kubescape Helm Scan:
   extends:
