--- a/04-sast/k8s.helm/trivy.helm.gitlab-ci.yml
+++ b/04-sast/k8s.helm/trivy.helm.gitlab-ci.yml
@@ -1,6 +1,9 @@
 include:
   - local: 'functions.gitlab-ci.yml'
 
+variables:
+  DD_UPLOAD_REPORT: "true"
+
 # Trivy
 Trivy K8S Scanning:
   extends:
