--- a/04-sast/go/vuln.gitlab-ci.yml
+++ b/04-sast/go/vuln.gitlab-ci.yml
@@ -1,6 +1,9 @@
 include:
   - local: 'functions.gitlab-ci.yml'
 
+variables:
+  DD_UPLOAD_REPORT: "true"
+
 # добавить и попробовать
 # https://github.com/golang/vuln
 
