--- a/04-sast/java.gitlab-ci.yml
+++ b/04-sast/java.gitlab-ci.yml
@@ -1,108 +1,5 @@
 include:
-  - local: 'functions.gitlab-ci.yml'
-
-# PMD (https://github.com/pmd/pmd)
-pmd:
-  variables:
-    SAST_IMAGE: harbor.example.com/devops/pmd:latest
-    SEARCH_MAX_DEPTH: 4
-    PMD_LANGUAGE: java
-    PMD_LANGUAGE_RULESETS: rulesets
-    PMD_MINIMUM_TOKENS: 0
-  extends:
-    - ".sast_base"
-    - ".DefectDojo_variables"
-  script:
-    - /pmd-bin-7.1.0/bin/pmd check 
-      -d .
-      -f json
-      -r reports/sast.pmd.report.json
-  rules:
-    - if: "$SAST_EXCLUDED_ANALYZERS =~ /pmd/"
-      when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
-    # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /java$/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
-  when: manual
-  allow_failure: true
-
-cpd:
-  variables:
-    SAST_IMAGE: harbor.example.com/devops/pmd:latest
-    SEARCH_MAX_DEPTH: 4
-    CPD_LANGUAGE: java
-    CPD_LANGUAGE_RULESETS: rulesets
-    CPD_MINIMUM_TOKENS: 0
-  extends:
-    - ".sast_base"
-    - ".DefectDojo_variables"
-  script:
-    - /pmd-bin-7.1.0/bin/pmd cpd 
-      -d .
-      --minimum-tokens=$CPD_MINIMUM_TOKENS
-      -f text
-      --language=$LANGUAGE
-      --rulesets=$LANGUAGE_RULESETS
-  rules:
-    - if: "$SAST_EXCLUDED_ANALYZERS =~ /cpd/"
-      when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
-    # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /java$/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
-  when: manual
-  allow_failure: true
-
-# SpotBugs (https://github.com/spotbugs/spotbugs)
-spotbugs:
-  variables:
-    SAST_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
-    SEARCH_MAX_DEPTH: 4
-  extends:
-    - ".sast_base"
-    - ".DefectDojo_variables"
-  script:
-    - echo sobelow
-    - echo sobelow > reports/sast.sobelow.report.json
-  rules:
-    - if: "$SAST_EXCLUDED_ANALYZERS =~ /spotbugs/"
-      when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
-    # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /java$/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
-  when: manual
-  allow_failure: true
-
-# Bearer (https://github.com/Bearer/bearer)
-Bearer:
-  variables:
-    SAST_IMAGE: harbor.example.com/devops/bearer:latest
-    SEARCH_MAX_DEPTH: 4
-  extends:
-    - ".sast_base"
-    - ".DefectDojo_variables"
-  script:
-    - /bin/bearer scan .
-      --format sarif
-      --output reports/sast.bearer.report.json
-  after_script:
-    - |
-      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
-        echo "Uploading"
-        dd-wrapper --dd-report-file=reports/sast.bearer.report.json --dd-engagement-test-title="Bearer Sarif Report" --dd-engagement-scan-type="SARIF"
-      fi
-  rules:
-    - if: "$SAST_EXCLUDED_ANALYZERS =~ /bearer/"
-      when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
-    # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /(javascript|typescript|ruby|php|go|python|java$|tsx)/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
-  when: manual
-  allow_failure: true
-
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+  - local: '04-sast/java/bearer.gitlab-ci.yml'
+  - local: '04-sast/java/cpd.gitlab-ci.yml'
+  - local: '04-sast/java/pmd.gitlab-ci.yml'
+  - local: '04-sast/java/spotbugs.gitlab-ci.yml'
