--- a/04-sast/mobile.gitlab-ci.yml
+++ b/04-sast/mobile.gitlab-ci.yml
@@ -1,63 +1,6 @@
 include:
-  - local: 'functions.gitlab-ci.yml'
+  - local: '04-sast/mobile/mobsf-adnroid.gitlab-ci.yml'
+  - local: '04-sast/mobile/mobsf-ios.gitlab-ci.yml'
 
-".mobsf":
-  variables:
-    SAST_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
-    SEARCH_MAX_DEPTH: 4
-  extends:
-    - ".sast_base"
-    - ".DefectDojo_variables"
-  rules:
-    - when: never
-  script:
-    - echo mobsf
-  allow_failure: true
-
-# +
-mobsf-android:
-  variables:
-    SAST_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
-    SEARCH_MAX_DEPTH: 4
-  extends:
-    - ".mobsf"
-  script:
-    - echo mobsf-android
-    - echo mobsf-android > reports/sast.mobsf-android.report.json
-  rules:
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
-    - if: "$SAST_EXCLUDED_ANALYZERS =~ /mobsf/"
-      when: never
-    - if: "$CI_COMMIT_BRANCH && $SAST_EXPERIMENTAL_FEATURES == 'true'"
-      exists:
-        - "**/*.apk"
-        - "**/AndroidManifest.xml"
-  allow_failure: true
-  when: manual
-
-# +
-mobsf-ios:
-  variables:
-    SAST_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
-    SEARCH_MAX_DEPTH: 4
-  extends:
-    - ".mobsf"
-  script:
-    - echo mobsf-ios
-    - echo mobsf-ios > reports/sast.mobsf-ios.report.json
-  rules:
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
-    - if: "$SAST_EXCLUDED_ANALYZERS =~ /mobsf/"
-      when: never
-    - if: "$CI_COMMIT_BRANCH && $SAST_EXPERIMENTAL_FEATURES == 'true'"
-      exists:
-        - "**/*.ipa"
-        - "**/*.xcodeproj/*"
-  allow_failure: true
-  when: manual
-
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+variables:
+  DD_UPLOAD_REPORT: "true"
