--- a/02-lint/php.gitlab-ci.yml
+++ b/02-lint/php.gitlab-ci.yml
@@ -1,12 +1,2 @@
 include:
-  - local: 'functions.gitlab-ci.yml'
-
-php-lint:
-  extends:
-    - ".lint_base"
-    - ".lint_rule"
-  variables:
-    LINT_IMAGE: harbor.example.com/devops/php-lint:latest
-  script:
-    - echo "Nothing"
-  when: manual
+  - local: '02-lint/php/php-lint.gitlab-ci.yml'
