--- a/02-lint/docker.file.gitlab-ci.yml
+++ b/02-lint/docker.file.gitlab-ci.yml
@@ -1,34 +1,5 @@
 include:
-  - local: 'functions.gitlab-ci.yml'
+  - local: '02-lint/docker.file/kics.gitlab-ci.yml'
 
 variables:
   CI_DOCKERFILE: Dockerfile
-
-# KICS Scanner (https://github.com/Checkmarx/kics)
-KICS Dockerfile Scanning:
-  extends:
-    - ".artifacts"
-    - ".lint_base"
-    - ".lint_rule"
-    - ".DefectDojo_variables"
-  variables:
-    LINT_IMAGE: harbor.example.com/devops/kics:latest
-  script:
-    - kics scan
-      --no-progress
-      --output-path reports/
-      --output-name lint.kics_dockerfile.report.json
-      --report-formats json
-      --path $CI_DOCKERFILE
-      --ignore-on-exit all
-  after_script:
-    - |
-      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
-        echo "Uploading"
-        dd-wrapper --dd-report-file=reports/lint.kics_dockerfile.report.json --dd-engagement-test-title="KICS Dockerfile Scanner" --dd-engagement-scan-type="KICS Scan"
-      fi
-  when: manual
-
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
