--- a/04-sast/docker.image.gitlab-ci.yml
+++ b/04-sast/docker.image.gitlab-ci.yml
@@ -1,4 +1,5 @@
 include:
+  - local: '04-sast/base/semgrep.gitlab-ci.yml'
   - local: '04-sast/docker.image/dockle.gitlab-ci.yml'
   - local: '04-sast/docker.image/grype.gitlab-ci.yml'
   - local: '04-sast/docker.image/trivy.gitlab-ci.yml'
