--- a/04-sast/go.gitlab-ci.yml
+++ b/04-sast/go.gitlab-ci.yml
@@ -1,4 +1,5 @@
 include:
+  - local: '04-sast/base/semgrep.gitlab-ci.yml'
   - local: '04-sast/go/gosec.gitlab-ci.yml'
   - local: '04-sast/go/vuln.gitlab-ci.yml'
 
