--- a/04-sast/java.gitlab-ci.yml
+++ b/04-sast/java.gitlab-ci.yml
@@ -1,4 +1,5 @@
 include:
+  - local: '04-sast/base/semgrep.gitlab-ci.yml'
   - local: '04-sast/java/bearer.gitlab-ci.yml'
   - local: '04-sast/java/cpd.gitlab-ci.yml'
   - local: '04-sast/java/pmd.gitlab-ci.yml'
