--- a/04-sast/mobile.gitlab-ci.yml
+++ b/04-sast/mobile.gitlab-ci.yml
@@ -1,4 +1,5 @@
 include:
+  - local: '04-sast/base/semgrep.gitlab-ci.yml'
   - local: '04-sast/mobile/mobsf-adnroid.gitlab-ci.yml'
   - local: '04-sast/mobile/mobsf-ios.gitlab-ci.yml'
 
