--- a/04-sast/tf.gitlab-ci.yml
+++ b/04-sast/tf.gitlab-ci.yml
@@ -1,4 +1,5 @@
 include:
+  - local: '04-sast/base/semgrep.gitlab-ci.yml'
   - local: '04-sast/tf/chechov.gitlab-ci.yml'
   - local: '04-sast/tf/kics.gitlab-ci.yml'
   - local: '04-sast/tf/terrascan.gitlab-ci.yml'
