--- a/01-secrets/detect-secrets.gitlab-ci.yml
+++ b/01-secrets/detect-secrets.gitlab-ci.yml
@@ -34,6 +34,6 @@ Detect-Secrets:
       fi
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
