--- a/01-secrets/gitleaks.gitlab-ci.yml
+++ b/01-secrets/gitleaks.gitlab-ci.yml
@@ -19,6 +19,6 @@ GitLeaks:
     - dd-wrapper --dd-report-file=reports/secrets.gitleaks.report.json --dd-engagement-test-title="Gitleaks Scan"  --dd-engagement-scan-type="Gitleaks Scan"
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
