--- a/01-secrets/talisman.gitlab-ci.yml
+++ b/01-secrets/talisman.gitlab-ci.yml
@@ -20,6 +20,6 @@ Talisman:
     - dd-wrapper --dd-report-file=reports/secrets.talisman.report.json --dd-engagement-test-title="Talisman Scan"  --dd-engagement-scan-type="Talisman Scan"
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
