--- a/01-secrets/trufflehog3.gitlab-ci.yml
+++ b/01-secrets/trufflehog3.gitlab-ci.yml
@@ -25,6 +25,6 @@ Trufflehog3:
       fi
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
