--- a/01-secrets/talisman.gitlab-ci.yml
+++ b/01-secrets/talisman.gitlab-ci.yml
@@ -7,6 +7,7 @@ Talisman:
     - ".artifacts"
     - ".secrets_base"
     - ".secrets_rule"
+    - ".DefectDojo_variables"
   variables:
     SECRETS_IMAGE: harbor.example.com/devops/talisman:latest
   script:
