--- a/01-secrets/detect-secrets.gitlab-ci.yml
+++ b/01-secrets/detect-secrets.gitlab-ci.yml
@@ -9,7 +9,7 @@ Detect-Secrets:
     - ".secrets_rule"
     - ".DefectDojo_variables"
   variables:
-    SECRETS_IMAGE: harbor.example.com/devops/detect-secrets:latest 
+    SECRETS_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/detect-secrets:latest 
     DETECT_SECRETS_IGNORE_FILE: ".detectsecretsingore"
   script:
     - |
