--- a/01-secrets/gitleaks.gitlab-ci.yml
+++ b/01-secrets/gitleaks.gitlab-ci.yml
@@ -9,7 +9,7 @@ GitLeaks:
     - ".secrets_rule"
     - ".DefectDojo_variables"
   variables:
-    SECRETS_IMAGE: harbor.example.com/devops/gitleaks:latest
+    SECRETS_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/gitleaks:latest
   script:
     - gitleaks detect
       --source .
