--- a/01-secrets/talisman.gitlab-ci.yml
+++ b/01-secrets/talisman.gitlab-ci.yml
@@ -9,7 +9,7 @@ Talisman:
     - ".secrets_rule"
     - ".DefectDojo_variables"
   variables:
-    SECRETS_IMAGE: harbor.example.com/devops/talisman:latest
+    SECRETS_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/talisman:latest
   script:
     - talisman
       --reportDirectory reports/
