--- a/01-secrets/trufflehog3.gitlab-ci.yml
+++ b/01-secrets/trufflehog3.gitlab-ci.yml
@@ -9,7 +9,7 @@ Trufflehog3:
     - ".secrets_rule"
     - ".DefectDojo_variables"
   variables:
-    SECRETS_IMAGE: harbor.example.com/devops/trufflehog3:latest
+    SECRETS_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/trufflehog3:latest
   script:
     - |
       if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
