--- a/01-secrets/detect-secrets.gitlab-ci.yml
+++ b/01-secrets/detect-secrets.gitlab-ci.yml
@@ -8,8 +8,10 @@ Detect-Secrets:
     - ".secrets_base"
     - ".secrets_rule"
     - ".DefectDojo_variables"
+  image:
+    name: registry.gitlab.com/dc20e6/devsecops/images/detect-secrets:latest
+    entrypoint: [""]
   variables:
-    SECRETS_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/detect-secrets:latest 
     DETECT_SECRETS_IGNORE_FILE: ".detectsecretsingore"
   script:
     - |
