--- a/01-secrets/gitleaks.gitlab-ci.yml
+++ b/01-secrets/gitleaks.gitlab-ci.yml
@@ -8,8 +8,9 @@ GitLeaks:
     - ".secrets_base"
     - ".secrets_rule"
     - ".DefectDojo_variables"
-  variables:
-    SECRETS_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/gitleaks:latest
+  image:
+    name: registry.gitlab.com/dc20e6/devsecops/images/gitleaks:latest
+    entrypoint: [""]
   script:
     - gitleaks detect
       --source .
