--- a/01-secrets/talisman.gitlab-ci.yml
+++ b/01-secrets/talisman.gitlab-ci.yml
@@ -8,8 +8,9 @@ Talisman:
     - ".secrets_base"
     - ".secrets_rule"
     - ".DefectDojo_variables"
-  variables:
-    SECRETS_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/talisman:latest
+  image:
+    name: registry.gitlab.com/dc20e6/devsecops/images/talisman:latest
+    entrypoint: [""]
   script:
     - talisman
       --reportDirectory reports/
