--- a/01-secrets/trufflehog3.gitlab-ci.yml
+++ b/01-secrets/trufflehog3.gitlab-ci.yml
@@ -18,12 +18,12 @@ Trufflehog3:
       else
         trufflehog3 .
       fi
-  after_script:
-    - |
-      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
-        echo "Uploading"
-        dd-wrapper --dd-report-file=reports/secrets.trufflehog3.report.json --dd-engagement-test-title="Trufflehog3 Scan" --dd-engagement-scan-type="Trufflehog3 Scan"
-      fi
+  # after_script:
+  #   - |
+  #     if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
+  #       echo "Uploading"
+  #       dd-wrapper --dd-report-file=reports/secrets.trufflehog3.report.json --dd-engagement-test-title="Trufflehog3 Scan" --dd-engagement-scan-type="Trufflehog3 Scan"
+  #     fi
   when: manual
 
 # DefectDojo Engagement Creation:
